buil header and banner for page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="assets\css\style.css">
     <link rel="stylesheet" href="assets\css\responsive.css">  
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700;800;900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/987d2f7f42.js" crossorigin="anonymous"></script>
 
     <title>Momo</title>
@@ -22,12 +22,36 @@
                         <p class="home-page__img">MOMO</p>
                     </a>
                 </li>
-                <li class="navbar__item">Dịch vụ <i class="fas fa-chevron-down navbar__item-icon"></i></li>
-                <li class="navbar__item">Dịch vụ <i class="fas fa-chevron-down navbar__item-icon"></i></li>
-                <li class="navbar__item">Dịch vụ <i class="fas fa-chevron-down navbar__item-icon"></i></li>
-                <li class="navbar__item">Dịch vụ <i class="fas fa-chevron-down navbar__item-icon"></i></li>
-                <li class="navbar__item">Dịch vụ <i class="fas fa-chevron-down navbar__item-icon"></i></li>
-                <li class="navbar__item">Dịch vụ <i class="fas fa-chevron-down navbar__item-icon"></i></li>
+                <li class="navbar__item">
+                    <a href="#" class="navbar__item-link">
+                        Dịch vụ <i class="fas fa-chevron-down navbar__item-icon"></i>
+                    </a>
+                </li>
+                <li class="navbar__item">
+                    <a href="#" class="navbar__item-link">
+                        Về MoMo <i class="fas fa-chevron-down navbar__item-icon"></i>
+                    </a>
+                </li>
+                <li class="navbar__item">
+                    <a href="#" class="navbar__item-link">
+                        Tin tức <i class="fas fa-chevron-down navbar__item-icon"></i>
+                    </a>
+                </li>
+                <li class="navbar__item">
+                    <a href="#" class="navbar__item-link">
+                        Trợ giúp <i class="fas fa-chevron-down navbar__item-icon"></i>
+                    </a>
+                </li>
+                <li class="navbar__item">
+                    <a href="#" class="navbar__item-link">
+                        Đốii tác <i class="fas fa-chevron-down navbar__item-icon"></i>
+                    </a>
+                </li>
+                <li class="navbar__item">
+                    <a href="#" class="navbar__item-link">
+                        Tuyển dụng <i class="fas fa-chevron-down navbar__item-icon"></i>
+                    </a>
+                </li>
             </ul>
             <div class="header__search">
                 <input type="text" class="search__box" placeholder="Bạn tìm gì ...">
@@ -36,7 +60,15 @@
         </div>
     </header>
     <div class="container">
-
+        <div class="banner">
+            <button class="banner__transfer-page banner__transfer-left">
+                <i class="fas fa-chevron-left banner__transfer-icon"></i>
+            </button>
+            <button class="banner__transfer-page banner__transfer-right">        
+                <i class="fas fa-chevron-right banner__transfer-icon"></i>       
+            </button>
+            <img src="https://static.mservice.io/banner/momo-upload-api-201201172123-637424400831797911.jpg" alt="" class="banner__img">
+        </div>
     </div>
     <footer class="footer">
 
