add service and banner for page

--- a/index.html
+++ b/index.html
@@ -69,6 +69,178 @@
             </button>
             <img src="https://static.mservice.io/banner/momo-upload-api-201201172123-637424400831797911.jpg" alt="" class="banner__img">
         </div>
+        <div class="grid-container">    
+        <div class="grid wide">
+            <div class="reason-use">
+                <div class="row">
+                    <div class="col l-12">
+                        <h2 class="reson-use__title">Ví điện tử MoMo - Siêu ứng dụng thanh toán số 1 Việt Nam</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col l-4 reason-list reason-list-left">
+                        <div class="reason-item">
+                            <div class="reason-item__avatar">
+                                <img src="https://static.mservice.io/jk/momo2020/img/momo/circle-bg-2.svg" alt="" class="reason-item__border">
+                                <img src="https://static.mservice.io/jk/momo2020/img/momo/icon2.svg" alt="" class="reason-item__img">
+                            </div>
+                            <div class="reason-item__content">
+                                <span class="content__highlight">20.000.000+</span>
+                                Người tin dùng
+                            </div>
+                        </div>
+                        <div class="reason-item">
+                            <div class="reason-item__avatar">
+                                <img src="https://static.mservice.io/jk/momo2020/img/momo/circle-bg-2.svg" alt="" class="reason-item__border">
+                                <img src="https://static.mservice.io/jk/momo2020/img/momo/icon2.svg" alt="" class="reason-item__img">
+                            </div>
+                            <div class="reason-item__content">
+                                <span class="content__highlight">20.000.000+</span>
+                                Người tin dùng
+                            </div>
+                        </div>
+                        <div class="reason-item">
+                            <div class="reason-item__avatar">
+                                <img src="https://static.mservice.io/jk/momo2020/img/momo/circle-bg-2.svg" alt="" class="reason-item__border">
+                                <img src="https://static.mservice.io/jk/momo2020/img/momo/icon2.svg" alt="" class="reason-item__img">
+                            </div>
+                            <div class="reason-item__content">
+                                <span class="content__highlight">20.000.000+</span>
+                                Người tin dùng
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col l-4">
+                        <img src="https://static.mservice.io/images/s/momo-upload-api-201005111248-637374931683322106.png" alt="" class="reason-use__img">
+                    </div>
+                    <div class="col l-4 reason-list reason-list-right">
+                        <div class="reason-item">
+                            <div class="reason-item__avatar">
+                                <img src="https://static.mservice.io/jk/momo2020/img/momo/circle-bg-2.svg" alt="" class="reason-item__border">
+                                <img src="https://static.mservice.io/jk/momo2020/img/momo/icon2.svg" alt="" class="reason-item__img">
+                            </div>
+                            <div class="reason-item__content">
+                                <span class="content__highlight">20.000.000+</span>
+                                Người tin dùng
+                            </div>
+                        </div>
+                        <div class="reason-item">
+                            <div class="reason-item__avatar">
+                                <img src="https://static.mservice.io/jk/momo2020/img/momo/circle-bg-2.svg" alt="" class="reason-item__border">
+                                <img src="https://static.mservice.io/jk/momo2020/img/momo/icon2.svg" alt="" class="reason-item__img">
+                            </div>
+                            <div class="reason-item__content">
+                                <span class="content__highlight">20.000.000+</span>
+                                Người tin dùng
+                            </div>
+                        </div>
+                        <div class="reason-item">
+                            <div class="reason-item__avatar">
+                                <img src="https://static.mservice.io/jk/momo2020/img/momo/circle-bg-2.svg" alt="" class="reason-item__border">
+                                <img src="https://static.mservice.io/jk/momo2020/img/momo/icon2.svg" alt="" class="reason-item__img">
+                            </div>
+                            <div class="reason-item__content">
+                                <span class="content__highlight">20.000.000+</span>
+                                Người tin dùng
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+        <div class="grid wide">
+            <div class="row">
+                <div class="col l-12">
+                    <h2 class="service__title">Tiện ích và dịch vụ</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col l-12">
+                    <div class="service-list">
+                        <div class="service-item service-item-active">
+                            <img src="https://static.mservice.io/styles/desktop/images/tienich/icon11.svg" alt="" class="service-item__img">
+                            Dịch vụ công cộng                   
+                        </div>
+                        <div class="service-item">
+                            <img src="https://static.mservice.io/styles/desktop/images/tienich/icon8.svg" alt="" class="service-item__img">
+                            Du lịch - Đi lại                     
+                        </div>
+                        <div class="service-item">
+                            <img src="https://static.mservice.io/styles/desktop/images/tienich/icon9.svg" alt="" class="service-item__img">
+                            Giải trí                     
+                        </div>
+                        <div class="service-item">
+                            <img src="https://static.mservice.io/styles/desktop/images/tienich/icon1.svg" alt="" class="service-item__img">
+                            Chuyển - nhận tiền                     
+                        </div>
+                        <div class="service-item">
+                            <img src="https://static.mservice.io/styles/desktop/images/tienich/icon2.svg" alt="" class="service-item__img">
+                            Nạp tiền điện thoại                     
+                        </div>
+                        <div class="service-item">
+                            <img src="https://static.mservice.io/styles/desktop/images/tienich/icon3.svg" alt="" class="service-item__img">
+                            Thanh toán hóa đơn                     
+                        </div>
+                        <div class="service-item">
+                            <img src="https://static.mservice.io/styles/desktop/images/tienich/icon4.svg" alt="" class="service-item__img">
+                            Thanh toán tại quầy                     
+                        </div>
+                        <div class="service-item">
+                            <img src="https://static.mservice.io/styles/desktop/images/tienich/icon5.svg" alt="" class="service-item__img">
+                            Mua sắm trực tuyến                     
+                        </div>
+                        <div class="service-item">
+                            <img src="https://static.mservice.io/styles/desktop/images/tienich/icon6.svg" alt="" class="service-item__img">
+                            Game - Ứng dụng                     
+                        </div>
+                        <div class="service-item">
+                            <img src="https://static.mservice.io/styles/desktop/images/tienich/icon7.svg" alt="" class="service-item__img">
+                            Tài chính - Bảo hiểm                     </div>
+                    </div>
+                    <div class="service-layout row">
+                        <div class="content-wrap col l-6">
+                            <div class="service-container">
+                                <h2 class="service__heading">Quyên góp- Từ thiện cùng MoMo</h2>
+                                <ul class="service__list-content">
+                                    <li class="service__item-content"> <img src="https://static.mservice.io/styles/desktop/images/svg/check.svg" alt="" class="item-content__logo"> Quyên góp chỉ từ 1.000đ</li>
+                                    <li class="service__item-content"><img src="https://static.mservice.io/styles/desktop/images/svg/check.svg" alt="" class="item-content__logo">Quyên góp chỉ bằng đi bộ hằng ngày</li>
+                                    <li class="service__item-content"><img src="https://static.mservice.io/styles/desktop/images/svg/check.svg" alt="" class="item-content__logo">Đối tác uy tín, danh sách minh bạch</li>
+                                </ul>
+                                <div class="service__programs">
+                                    <div class="row">
+                                        <div class="col l-3 service__program-item">
+                                            <img src="https://static.mservice.io/img/momo-upload-api-201130105739-637423306590907551.png" alt="" class="program-item__img">
+                                            Như chưa hề có cuộc chia ly
+                                        </div>
+                                        <div class="col l-3 service__program-item">
+                                            <img src="https://static.mservice.io/img/momo-upload-api-201013185830-637382123101342424.png" alt="" class="program-item__img">
+                                            Hướng về Miền Trung
+                                        </div>
+                                        <div class="col l-3 service__program-item">
+                                            <img src="https://static.mservice.io/img/momo-upload-api-200821094627-637335999877473756.png" alt="" class="program-item__img">
+                                            Quyết thắng Covid-19
+                                        </div>
+                                        <div class="col l-3 service__program-item">
+                                            <img src="https://static.mservice.io/img/momo-upload-api-200821094909-637336001493080065.jpg" alt="" class="program-item__img">
+                                            Điều nhỏ bé vĩ đại
+                                        </div>
+                                    </div>         
+                                </div>
+                                <div class="service-donation">
+                                    <a href="#" class="service-donation-link">Ủng hộ ngay</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="content-wrap-img col l-6">
+                            <img src="https://static.mservice.io/img/momo-upload-api-201203094721-637425856413277404.jpg" alt="" class="content-img">
+                        </div>
+                        
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <footer class="footer">
 
