fix position item banner

--- a/index.html
+++ b/index.html
@@ -92,21 +92,21 @@
                         <div class="reason-item">
                             <div class="reason-item__avatar">
                                 <img src="https://static.mservice.io/jk/momo2020/img/momo/circle-bg-2.svg" alt="" class="reason-item__border">
-                                <img src="https://static.mservice.io/jk/momo2020/img/momo/icon2.svg" alt="" class="reason-item__img">
+                                <img src="https://static.mservice.io/jk/momo2020/img/momo/icon4.svg" alt="" class="reason-item__img">
                             </div>
                             <div class="reason-item__content">
-                                <span class="content__highlight">20.000.000+</span>
-                                Người tin dùng
+                                <span class="content__highlight">120.000+</span>
+                                Điểm thanh toán
                             </div>
                         </div>
                         <div class="reason-item">
                             <div class="reason-item__avatar">
                                 <img src="https://static.mservice.io/jk/momo2020/img/momo/circle-bg-2.svg" alt="" class="reason-item__border">
-                                <img src="https://static.mservice.io/jk/momo2020/img/momo/icon2.svg" alt="" class="reason-item__img">
+                                <img src="https://static.mservice.io/jk/momo2020/img/momo/icon3.svg" alt="" class="reason-item__img">
                             </div>
                             <div class="reason-item__content">
-                                <span class="content__highlight">20.000.000+</span>
-                                Người tin dùng
+                                <span class="content__highlight">30.000+</span>
+                                dối tác thanh toán
                             </div>
                         </div>
                     </div>
@@ -117,31 +117,31 @@
                         <div class="reason-item">
                             <div class="reason-item__avatar">
                                 <img src="https://static.mservice.io/jk/momo2020/img/momo/circle-bg-2.svg" alt="" class="reason-item__border">
-                                <img src="https://static.mservice.io/jk/momo2020/img/momo/icon2.svg" alt="" class="reason-item__img">
+                                <img src="https://static.mservice.io/jk/momo2020/img/momo/icon6.svg" alt="" class="reason-item__img">
                             </div>
                             <div class="reason-item__content">
-                                <span class="content__highlight">20.000.000+</span>
-                                Người tin dùng
+                                <span class="content__highlight">Không tốn phí</span>
+                                Chuyển tiền siêu tốc
                             </div>
                         </div>
                         <div class="reason-item">
                             <div class="reason-item__avatar">
                                 <img src="https://static.mservice.io/jk/momo2020/img/momo/circle-bg-2.svg" alt="" class="reason-item__border">
-                                <img src="https://static.mservice.io/jk/momo2020/img/momo/icon2.svg" alt="" class="reason-item__img">
+                                <img src="https://static.mservice.io/jk/momo2020/img/momo/icon1.svg" alt="" class="reason-item__img">
                             </div>
                             <div class="reason-item__content">
-                                <span class="content__highlight">20.000.000+</span>
-                                Người tin dùng
+                                <span class="content__highlight">An toàn bảo mật</span>
+                                chuẩn quốc tế
                             </div>
                         </div>
                         <div class="reason-item">
                             <div class="reason-item__avatar">
                                 <img src="https://static.mservice.io/jk/momo2020/img/momo/circle-bg-2.svg" alt="" class="reason-item__border">
-                                <img src="https://static.mservice.io/jk/momo2020/img/momo/icon2.svg" alt="" class="reason-item__img">
+                                <img src="https://static.mservice.io/jk/momo2020/img/momo/icon5.svg" alt="" class="reason-item__img">
                             </div>
                             <div class="reason-item__content">
-                                <span class="content__highlight">20.000.000+</span>
-                                Người tin dùng
+                                <span class="content__highlight">Không tiền mặt</span>
+                                Thanh toán hiện đại
                             </div>
                         </div>
                     </div>
