add security for page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="assets\css\responsive.css">  
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
     <script src="https://kit.fontawesome.com/987d2f7f42.js" crossorigin="anonymous"></script>
 
     <title>Momo</title>
@@ -424,6 +425,36 @@
                     <div class="tobe-customer">
                         Trở thành khách hàng mới <strong>Gói quà 500k</strong>
                         <button class="wacth-now">Xem ngay</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="security">
+            <h2 class="security__heading">Thanh toán an toàn - Bảo mật tuyệt đối</h2>
+            <ul class="security__list-title">
+                <li class="security__item-title">Bảo chứng ngân hàng</li>
+                <li class="security__item-title">Bảo mật đa tầng</li>
+                <li class="security__item-title">Đạt chuẩn quốc tế</li>
+            </ul>
+            <div class="grid wide">
+                <div class="row">
+                    <div class="col l-6 m-6 c-12">
+                        <ul class="security__list-content">
+                            <li class="security__item-content">
+                                <span class="lnr lnr-checkmark-circle"></span>
+                                Tiền của bạn trong Ví MoMo là TIỀN THẬT và được bảo chứng 100% bởi các NGÂN HÀNG đang hợp tác với Ví MoMo.
+                            </li>
+                            <li class="security__item-content">
+                                <span class="lnr lnr-checkmark-circle"></span>
+                                Người dùng MoMo có thể Nạp/Rút tiền từ ngân hàng liên kết bất kỳ lúc nào.
+                            </li>
+                            <li class="security__item-content">
+                                <span class="lnr lnr-checkmark-circle"></span>
+                                MoMo đã liên kết trực tiếp với 25 ngân hàng lớn và các tổ chức thẻ quốc tế Visa/Master/JCB.
+                        </ul>
+                    </div>
+                    <div class="col l-6 m-6 c-12">
+                        <img src="https://static.mservice.io/blogscontents/momo-upload-api-201209104642-637431076025683056.png" alt="" class="security__img">
                     </div>
                 </div>
             </div>
